# LibreERP

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.mk  db.nts  ideas.nts  logic.nts  main.cpp  moduły-plan budowy.txt  moduły.txt  protocol.nts  view.nts
core/: Makefile  user.hpp
core/models/: Makefile  address.cpp  address.sql  role.cpp  role.sql  user.cpp  user.sql
core/queries/: Makefile  address-query.cpp  iquery.cpp  role-query.cpp  user-query.cpp
core/repos/: Makefile  address-repository.cpp  irepository.cpp  role-repository.cpp  user-repository.cpp
core/tests/: Makefile
core/tests/utils/: Makefile  e-mail-validator.test.cpp  e-mail.test.cpp  glueable-string-vector.test.cpp  postal-code.test.cpp
core/utils/: Makefile  address.cpp  address.hpp  e-mail-validator.cpp  e-mail.cpp  e-mail.hpp  glueable-string-vector.cpp  glueable-vector.cpp  macros.hpp  postal-code.cpp  postal-code.hpp  threaded-vector.cpp
cpp/: Makefile
cpp/include/: module.hpp
cpp/lib/include/: typedefs.hpp
cpp/lib/include/sql/: delete.hpp  select.hpp  (+1 more)
cpp/src/: module.cpp
include/: module.hpp  state.hpp
lib/include/: db.hpp
lib/include/core/: workers.hpp
lib/include/db/: modules.hpp  server-config.hpp
lib/include/sql/: alter.hpp  cond.hpp  delete.hpp  drop.hpp  insert.hpp  select.hpp  statement.hpp  table.hpp  update.hpp
lib/src/: db.cpp
lib/src/core/: workers.cpp
lib/src/db/: modules.cpp  server-config.cpp
lib/src/sql/: alter.cpp  delete.cpp  drop.cpp  insert.cpp  select.cpp  update.cpp
src/: main.cpp  module.cpp
testing/: testing.hpp
(+7 files in other folders)
